# lumen

./: .gitignore  CLAUDE.md  DECISIONS.md  Makefile  README.md  TODO.md
.github/workflows/: iso-build.yml
desktop/layout/: kdeglobals
desktop/plymouth/: lumen.plymouth
desktop/theme/: metadata.desktop
docs/: development.md  index.md
installer/: settings.conf
installer/branding/lumen/: branding.desc
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/skel/.config/: kglobalshortcutsrc
iso/airootfs/etc/systemd/system/: lumen-aid.service
iso/airootfs/usr/share/applications/: lumen-overlay.desktop
iso/grub/: grub.cfg
iso/syslinux/: lumen.cfg  syslinux.cfg
lumen_ai/: pyproject.toml
lumen_ai/backends/: base.py  mock.py  ollama.py
lumen_ai/daemon/: main.py  persistence.py
lumen_ai/overlay/: LumenStyle.qml  Main.qml  bridge.py  main.py
lumen_ai/tools/: drivers.py  manager.py  system.py
lumen_drivers/: manager.py
lumen_store/: pamac.conf
scripts/: build-iso.sh  build-packages.sh
